--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 Table Tennis Website
+<header>Im too cool</header>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Sudhish -->
 <ins class="adsbygoogle"
