--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                             <div class="row-fluid">
                                 <div class="span10 offset1">
                                     <h1>Subscribe To "Curry Munchr" on YouTube</h1>
-                                    <a href="https://www.youtube.com/channel/UC8kdiBQ328rWdMyzBPSs3pg"></a>
-                                    <a href="#" class="btn">more about me</a>
+                                
+                                    <a href="#" class="https://www.youtube.com/channel/UC8kdiBQ328rWdMyzBPSs3pg</a>
                                 </div>
                             </div>
                         </div>
