--- a/index.html
+++ b/index.html
@@ -89,14 +89,7 @@
                                             <li><a href="#">https://www.youtube.com/watch?v=-WU44DuaBEc/</a></li>
                                             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- rect -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-1191953619191612"
-     data-ad-slot="1357224888"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+
                                         </ul>
                                         
                                     </div>
@@ -149,6 +142,14 @@ $('#myCarousel').carousel({
     interval: 1800
 });
 </script>
-
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Homepage Leaderboard -->
+<ins class="adsbygoogle"
+style="display:inline-block;width:728px;height:90px"
+data-ad-client="ca-pub-1234567890123456"
+data-ad-slot="1234567890"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     </body>
 </html>
