--- a/index.html
+++ b/index.html
@@ -91,14 +91,16 @@
                                             <div align="center">
                                             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- rect -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-1191953619191612"
-     data-ad-slot="1357224888"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>  
+<script type="text/javascript">
+    google_ad_client = "ca-pub-1191953619191612";
+    google_ad_slot = "3562314888";
+    google_ad_width = 728;
+    google_ad_height = 90;
+</script>
+<!-- Sudhish -->
+<script type="text/javascript"
+src="//pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 </div>
 <!-- rect -->
  
