--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 <div class="span10 offset1">
                                     <h1>Subscribe To "Curry Munchr" on YouTube</h1>
                                 
-                                    <li><a href="#">https://www.youtube.com/channel/UC8kdiBQ328rWdMyzBPSs3pg</a></li>
+                                    <a href="#">https://www.youtube.com/channel/UC8kdiBQ328rWdMyzBPSs3pg</a>
                                 </div>
                             </div>
                         </div>
@@ -85,8 +85,8 @@
                                         <p class="last">Please watch and like all my videos.</p>
 
                                         <ul class="ruler-top">
-                                            <li><a href="#">https://www.youtube.com/watch?v=KkgvTwlorPU/</a></li>
-                                            <li><a href="#">https://www.youtube.com/watch?v=-WU44DuaBEc/</a></li>
+                                            <a href="#">https://www.youtube.com/watch?v=KkgvTwlorPU/</a>
+                                            <a href="#">https://www.youtube.com/watch?v=-WU44DuaBEc/</a>
                                             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                                             <div align="center">
                                             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
