--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                             </div>
                         </div>
                         </div>
+
                         <div class="featured-heading">
                             <div class="row-fluid">
                                 <div class="span10 offset1">
@@ -148,6 +149,15 @@ src="//pagead2.googlesyndication.com/pagead/show_ads.js">
                                 <div class="span6 align-right">
                                 
                                     </ul>
+                                    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- rect2 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:336px;height:280px"
+     data-ad-client="ca-pub-1191953619191612"
+     data-ad-slot="4310691284"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                                 </div>
                             </div>
                         </div>
