--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
                                     <h1>Subscribe To "Curry Munchr" on YouTube</h1>
                                 
                                     <a href="#">https://www.youtube.com/channel/UC8kdiBQ328rWdMyzBPSs3pg</a>
+
+Click <a href="https://www.youtube.com/channel/UC8kdiBQ328rWdMyzBPSs3pg">here</a> to go to my channel.
                                 </div>
                             </div>
                         </div>
@@ -88,6 +90,7 @@
                                         <ul class="ruler-top">
                                             <a href="#">https://www.youtube.com/watch?v=KkgvTwlorPU/</a>
                                             <a href="#">https://www.youtube.com/watch?v=-WU44DuaBEc/</a>
+
                                             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                                             <div align="center">
                                             <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
