--- a/index.html
+++ b/index.html
@@ -92,7 +92,15 @@ Click <a href="https://www.youtube.com/channel/UC8kdiBQ328rWdMyzBPSs3pg">here</a
                                             <a href="#">https://www.youtube.com/watch?v=-WU44DuaBEc/</a>
 
                                         </ul>
-                                        
+                                        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Sudhish -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-1191953619191612"
+     data-ad-slot="3562314888"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                                     </div>
                                 </div>
                             </div>
