--- a/index.html
+++ b/index.html
@@ -77,6 +77,16 @@ Click <a href="https://www.youtube.com/channel/UC8kdiBQ328rWdMyzBPSs3pg">here</a
                             <div class="row-fluid">
                                 <div class="span6">
                                     <div class="block">
+                                    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- rect -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1191953619191612"
+     data-ad-slot="1357224888"
+     data-ad-format="auto"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                                         <h1>Cringe Factor</h1>
                                         <p>I attempt to make my videos cringy, sorry if it hurts your brain. It is just meant to be funny?</p>
                                         
