--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
           </select>
           </label>
           </div>
+                           <a class="rcptr" href="http://www.rafflecopter.com/rafl/display/980f49280/" rel="nofollow" data-raflid="980f49280" data-theme="classic" data-template="" id="rcwidget_468gnpno">a Rafflecopter giveaway</a>
+<script src="https://widget-prime.rafflecopter.com/launch.js"></script>
                             </div>
                         </div>
                         <div class="banner-shadow">
@@ -98,9 +100,9 @@ Click <a href="https://www.youtube.com/channel/UC8kdiBQ328rWdMyzBPSs3pg">here</a
                                         <p class="last">Please watch and like all my videos.</p>
 
                                         <ul class="ruler-top">
-                                            <a href="#">https://www.youtube.com/watch?v=KkgvTwlorPU/</a>
-                                            <a href="#">https://www.youtube.com/watch?v=-WU44DuaBEc/</a>
-
+                                           <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/RuQWO1EEZx0?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
+                                           <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/-WU44DuaBEc?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
+                                           <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/KkgvTwlorPU?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
                                         </ul>
                                         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Sudhish -->
