--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                                 <div class="span10 offset1">
                                     <h1>Subscribe To "Curry Munchr" on YouTube</h1>
                                 
-                                    <a href="#">https://www.youtube.com/channel/UC8kdiBQ328rWdMyzBPSs3pg</a>
+                                    
 
 Click <a href="https://www.youtube.com/channel/UC8kdiBQ328rWdMyzBPSs3pg">here</a> to go to my channel.
                                 </div>
@@ -80,6 +80,8 @@ Click <a href="https://www.youtube.com/channel/UC8kdiBQ328rWdMyzBPSs3pg">here</a
                                 <div class="span6">
                                     <div class="block">
                                     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+                                    google-site-verification: googlef8fb09b06920ee8a.html
 <!-- rect -->
 <ins class="adsbygoogle"
      style="display:block"
@@ -100,9 +102,9 @@ Click <a href="https://www.youtube.com/channel/UC8kdiBQ328rWdMyzBPSs3pg">here</a
                                         <p class="last">Please watch and like all my videos.</p>
 
                                         <ul class="ruler-top">
-                                           <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/RuQWO1EEZx0?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
-                                           <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/-WU44DuaBEc?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
-                                           <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/KkgvTwlorPU?ecver=2" width="640" height="360" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
+                                           <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/RuQWO1EEZx0?ecver=2" width="300" height="200" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
+                                           <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/-WU44DuaBEc?ecver=2" width="300" height="200" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
+                                           <div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/KkgvTwlorPU?ecver=2" width="300" height="200" frameborder="0" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
                                         </ul>
                                         <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Sudhish -->
