--- a/index.html
+++ b/index.html
@@ -89,11 +89,22 @@ Click <a href="https://www.youtube.com/channel/UC8kdiBQ328rWdMyzBPSs3pg">here</a
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
                                         <h1>Cringe Factor</h1>
                                         <p>I attempt to make my videos cringy, sorry if it hurts your brain. It is just meant to be funny?</p>
                                         
                                     </div>
                                 </div>
+                            <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- sky -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:600px"
+     data-ad-client="ca-pub-1191953619191612"
+     data-ad-slot="2833958087"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
                                 <div class="span6">
                                     <div class="block">
                                         <h1>VIDEOS</h1>
