--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Licence URI: http://www.os-templates.com/template-terms
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>Darkness</title>
+<title>Sudhish Reddy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link rel="stylesheet" href="layout/styles/layout.css" type="text/css" />
 </head>
@@ -16,16 +16,14 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="wrapper">
   <div id="header">
     <div id="logo">
-      <h1><a href="index.html">Darkness</a></h1>
-      <p>Free Website Template</p>
+    
+      <p>Sudhish Reddy Official Website</p>
     </div>
     <div id="topnav">
       <ul>
         <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="pages/style-demo.html">Style Demo</a></li>
-        <li><a href="pages/full-width.html">Full Width</a></li>
-        <li><a href="#">Link Text</a></li>
-        <li class="last"><a href="#">A Long Link Text</a></li>
+        <li><a href="pages/style-demo.html">Table Tennis</a></li>
+        <li><a href="pages/full-width.html">YouTube</a></li>
       </ul>
     </div>
     <br class="clear" />
