--- a/index.html
+++ b/index.html
@@ -48,24 +48,24 @@ Licence URI: http://www.os-templates.com/template-terms
   <div id="intro">
     <ul>
       <li>
-        <h2>Indonectetus facilis leo nibh</h2>
+        <h2>Topspin</h2>
         <div class="imgholder"><a href="#"><img src="images/demo/300x150.gif" alt="" /></a></div>
-        <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa. </p>
-        <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
+        <p>Topsin in table tennis loops the ball and makes it dip downwards on to the table rapidly. It also forces your opponents return shot to be too long and idealy miss the table. </p>
+        <p></p>
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
       </li>
       <li>
-        <h2>Indonectetus facilis leo nibh</h2>
+        <h2>Backspin</h2>
         <div class="imgholder"><a href="#"><img src="images/demo/300x150.gif" alt="" /></a></div>
-        <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa. </p>
-        <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
+        <p>Backspin gives the ball a floating effect and makes it stay at the same height above the table longer. It also forces your opponents return to be short and idealy hit the net.</p>
+        <p></p>
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
       </li>
       <li class="last">
-        <h2>Indonectetus facilis leo nibh</h2>
+        <h2>Flat</h2>
         <div class="imgholder"><a href="#"><img src="images/demo/300x150.gif" alt="" /></a></div>
-        <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa. </p>
-        <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
+        <p>Flat balls are usually only hit for smashes and are extremely easy for your opponent to return if you don't put enough speed on them.</p>
+        <p></p>
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
       </li>
     </ul>
