--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Licence URI: http://www.os-templates.com/template-terms
   <div id="header">
     <div id="logo">
     
-      <p><font size="+5"> Sudhish Reddy Official Website</font></p>
+      <p><font size="+5"> Murali is Gora</font></p>
     </div>
     <div id="topnav">
       <ul>
