--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ Licence URI: http://www.os-templates.com/template-terms
     </div>
     <div id="topnav">
       <ul>
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="pages/style-demo.html">Table Tennis</a></li>
-        <li><a href="pages/full-width.html">YouTube</a></li>
+        <li class="active"><a href="index.html">soidf'isjfohiwef</a></li>
+        <li><a href="pages/style-demo.html">SUDHISH IS BEST</a></li>
+        <li><a href="pages/full-width.html">MURALI IS WORSSSST</a></li>
       </ul>
     </div>
     <br class="clear" />
@@ -50,21 +50,18 @@ Licence URI: http://www.os-templates.com/template-terms
       <li>
         <h2>Topspin</h2>
         <div class="imgholder"><a href="#"><img src="images/demo/300x150.gif" alt="" /></a></div>
-        <p>Topsin in table tennis loops the ball and makes it dip downwards on to the table rapidly. It also forces your opponents return shot to be too long and idealy miss the table. </p>
         <p></p>
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
       </li>
       <li>
         <h2>Backspin</h2>
         <div class="imgholder"><a href="#"><img src="images/demo/300x150.gif" alt="" /></a></div>
-        <p>Backspin gives the ball a floating effect and makes it stay at the same height above the table longer. It also forces your opponents return to be short and idealy hit the net.</p>
         <p></p>
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
       </li>
       <li class="last">
         <h2>Flat</h2>
         <div class="imgholder"><a href="#"><img src="images/demo/300x150.gif" alt="" /></a></div>
-        <p>Flat balls are usually only hit for smashes and are extremely easy for your opponent to return if you don't put enough speed on them.</p>
         <p></p>
         <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
       </li>
