--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Licence URI: http://www.os-templates.com/template-terms
     <div class="fl_left"><a href="#"><img src="images/demo/575x300.gif" alt="" /></a></div>
     <div class="fl_right">
       <h2>Cursus penati saccum ut.</h2>
-      <p>Cursuspenatisaccum ut curabitur nulla tellus tor ames a in curabitur pede. Idet mollisi eros dis orci congue elis et curabitur consequam intesque. Cursuspenatisaccum ut curabitur nulla tellus tor.</p>
+      <p>Cursuspenatisaccum ut curabitur nula tellus tor ames a in curabitur pede. Idet mollisi eros dis orci congue elis et curabitur consequam intesque. Cursuspenatisaccum ut curabitur nulla tellus tor.</p>
       <ul>
         <li><a href="#"><img src="images/demo/100x100.gif" alt="" /></a></li>
         <li><a href="#"><img src="images/demo/100x100.gif" alt="" /></a></li>
