--- a/index.html
+++ b/index.html
@@ -1,153 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<!--
-Template Name: Darkness
-Author: <a href="http://www.os-templates.com/">OS Templates</a>
-Author URI: http://www.os-templates.com/
-Licence: Free to use under our free template licence terms
-Licence URI: http://www.os-templates.com/template-terms
--->
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 <head>
-<title>Sudhish Reddy</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<link rel="stylesheet" href="layout/style/layout.css" type="text/css" />
+    <title>BRUHHHHHHH IDKK</title>
 </head>
-<body id="top">
-<div class="wrapper">
-  <div id="header">
-    <div id="logo">
-    
-      <p><font size="+5"> Sudhish Reddy Official Website</font></p>
-    </div>
-    <div id="topnav">
-      <ul>
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="pages/style-demo.html">Table Tennis</a></li>
-        <li><a href="pages/full-width.html">YouTube</a></li>
-      </ul>
-    </div>
-    <br class="clear" />
-  </div>
-</div>
-<div class="wrapper">
-  <div id="latest">
-    <div class="fl_left"><a href="#"><img src="images/demo/575x300.gif" alt="" /></a></div>
-    <div class="fl_right">
-      <h2>Cursus penati saccum ut.</h2>
-      <p>Cursuspenatisaccum ut curabitur nulla tellus tor ames a in curabitur pede. Idet mollisi eros dis orci congue elis et curabitur consequam intesque. Cursuspenatisaccum ut curabitur nulla tellus tor.</p>
-      <ul>
-        <li><a href="#"><img src="images/demo/100x100.gif" alt="" /></a></li>
-        <li><a href="#"><img src="images/demo/100x100.gif" alt="" /></a></li>
-        <li class="last"><a href="#"><img src="images/demo/100x100.gif" alt="" /></a></li>
-      </ul>
-    </div>
-    <br class="clear" />
-  </div>
-</div>
-<div class="wrapper">
-  <div id="intro">
-    <ul>
-      <li>
-        <h2>Indonectetus facilis leo nibh</h2>
-        <div class="imgholder"><a href="#"><img src="images/demo/300x150.gif" alt="" /></a></div>
-        <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa. </p>
-        <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
-        <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
-      </li>
-      <li>
-        <h2>Indonectetus facilis leo nibh</h2>
-        <div class="imgholder"><a href="#"><img src="images/demo/300x150.gif" alt="" /></a></div>
-        <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa. </p>
-        <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
-        <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
-      </li>
-      <li class="last">
-        <h2>Indonectetus facilis leo nibh</h2>
-        <div class="imgholder"><a href="#"><img src="images/demo/300x150.gif" alt="" /></a></div>
-        <p>Morbitincidunt maurisque eros molest nunc anteget sed vel lacus mus semper. Anter dumnullam interdum eros dui urna consequam ac nisl nullam ligula vestassa. </p>
-        <p>Condimentumfelis et amet tellent quisquet a leo lacus nec augue accumsan. Sagittislaorem dolor ipsum at urna et pharetium malesuada nis consectus odio.</p>
-        <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
-      </li>
-    </ul>
-    <br class="clear" />
-  </div>
-</div>
-<div class="wrapper">
-  <div id="container">
-    <div id="content">
-      <h2>About This Free CSS Template</h2>
-      <p>This is a W3C standards compliant free website template from <a href="http://www.os-templates.com/">OS Templates</a>.</p>
-      <p>This template is distributed using a <a href="http://www.os-templates.com/template-terms">Website Template Licence</a>, which allows you to use and modify the template for both personal and commercial use when you keep the provided credit links in the footer.</p>
-      <p>For more CSS templates visit <a href="http://www.os-templates.com/">Free Website Templates</a>.</p>
-    </div>
-    <div id="column">
-      <div class="holder">
-        <h2>Nullamlacus loborttis</h2>
-        <ul id="latestnews">
-          <li class="last"><img class="imgl" src="images/demo/80x80.gif" alt="" />
-            <p><strong>Indonectetus facilis leo nibh.</strong></p>
-            <p>Nullamlacus dui ipsum cons eque loborttis non euis que morbi penas dapibulum orna.</p>
-            <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <br class="clear" />
-  </div>
-</div>
-<div class="wrapper">
-  <div id="footer">
-    <div id="newsletter">
-      <h2>Stay In The Know !</h2>
-      <p>Please enter your email to join our mailing list</p>
-      <form action="#" method="post">
-        <fieldset>
-          <legend>News Letter</legend>
-          <input type="text" value="Enter Email Here&hellip;"  onfocus="this.value=(this.value=='Enter Email Here&hellip;')? '' : this.value ;" />
-          <input type="submit" name="news_go" id="news_go" value="GO" />
-        </fieldset>
-      </form>
-      <p>To unsubscribe please <a href="#">click here &raquo;</a></p>
-    </div>
-    <div class="footbox">
-      <h2>Lacus interdum</h2>
-      <ul>
-        <li><a href="#">Praesent et eros</a></li>
-        <li><a href="#">Praesent et eros</a></li>
-        <li><a href="#">Lorem ipsum dolor</a></li>
-        <li><a href="#">Suspendisse in neque</a></li>
-        <li class="last"><a href="#">Praesent et eros</a></li>
-      </ul>
-    </div>
-    <div class="footbox">
-      <h2>Lacus interdum</h2>
-      <ul>
-        <li><a href="#">Praesent et eros</a></li>
-        <li><a href="#">Praesent et eros</a></li>
-        <li><a href="#">Lorem ipsum dolor</a></li>
-        <li><a href="#">Suspendisse in neque</a></li>
-        <li class="last"><a href="#">Praesent et eros</a></li>
-      </ul>
-    </div>
-    <div class="footbox">
-      <h2>Lacus interdum</h2>
-      <ul>
-        <li><a href="#">Praesent et eros</a></li>
-        <li><a href="#">Praesent et eros</a></li>
-        <li><a href="#">Lorem ipsum dolor</a></li>
-        <li><a href="#">Suspendisse in neque</a></li>
-        <li class="last"><a href="#">Praesent et eros</a></li>
-      </ul>
-    </div>
-    <br class="clear" />
-  </div>
-</div>
-<div class="wrapper">
-  <div id="copyright">
-    <p class="fl_left">Copyright &copy; 2014 - All Rights Reserved - <a href="#">Domain Name</a></p>
-    <p class="fl_right">Template by <a target="_blank" href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
-    <br class="clear" />
-  </div>
-</div>
+<body>
+<h1>NICK CANDELLO=VICE PRESIDENT</h1>
+<h2>GANG GANG</h2>
+<h3>YAAARK</h3>
+<img src=http://www.nsbe.org/getattachment/1f62103f-7e80-4b2c-9663-2fdd8ce58248/MATHCOUNTS.aspx?maxsidesize=600 title="Click for a bitch" />
+<a href=https://www.mathcounts.org/resources/problem-of-the-week title="click for a bich"> Click for dat shmoney </a>
 </body>
 </html>
