--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <img src=http://www.nsbe.org/getattachment/1f62103f-7e80-4b2c-9663-2fdd8ce58248/MATHCOUNTS.aspx?maxsidesize=600 title="Click for a bitch" />
 <a href=https://www.mathcounts.org/resources/problem-of-the-week title="click for a bich"> Click for dat shmoney </a>
 <img src=https://lh3.googleusercontent.com/-uB509OfBrWU/WnJwrcDMdYI/AAAAAAAAGAA/gfyqF90OGQs2YGOMqYsQ7JxUPzbRKyy3QCK8BGAs/s512/2018-01-31.jpg title="gets all the hoes" />
+<a href=http://cosmic-horizons.blogspot.com/2017/05/the-chick-peck-problem.html title=eskeetit/> CHICK PECK CHICK PECK CHICK PECK AYYYYY </a>
+
 
 </body>
 </html>
