--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
 <h1>NICK CANDELLO=VICE PRESIDENT</h1>
-<h2>SUDS = Muy inteligente and not geting kicked ouuta class today.</h2>
+<h2>eARLY DISMISSAL ESKEETITTTTa</h2>
 <h3>YAAARK</h3>
 <img src=http://www.nsbe.org/getattachment/1f62103f-7e80-4b2c-9663-2fdd8ce58248/MATHCOUNTS.aspx?maxsidesize=600 title="Click for a bitch" />
 <a href=https://www.mathcounts.org/resources/problem-of-the-week title="click for a bich"> Click for dat shmoney </a>
