--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<h1>NICK testing =VICE PRESIDENT</h1>
+<h1>NICK  =VICE PRESIDENT</h1>
 <h2>eARLY DISMISSAL ESKEETITTTTa</h2>
 <h3>YAAARK</h3>
 <img src=http://www.nsbe.org/getattachment/1f62103f-7e80-4b2c-9663-2fdd8ce58248/MATHCOUNTS.aspx?maxsidesize=600 title="Click for a bitch" />
